--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@emotion/styled": "^11.11.5",
     "@heroicons/react": "^2.1.3",
     "@material-tailwind/react": "^2.1.9",
+    "firebase": "^10.12.2",
     "framer-motion": "^11.2.10",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.5",
+    "react-hook-form": "^7.51.5",
     "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
