--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.51.5",
-    "react-router-dom": "^6.23.1"
+    "react-hot-toast": "^2.4.1",
+    "react-router-dom": "^6.23.1",
+    "react-simple-captcha": "^9.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
