--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.51.5",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
     "react-simple-captcha": "^9.3.1"
   },
