--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@material-tailwind/react": "^2.1.9",
     "@tanstack/react-query": "^5.40.0",
     "axios": "^1.7.2",
+    "date-fns": "^3.6.0",
     "firebase": "^10.12.2",
     "framer-motion": "^11.2.10",
     "prop-types": "^15.8.1",
