--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.23.1",
     "react-simple-captcha": "^9.3.1",
+    "recharts": "^2.12.7",
     "sweetalert2": "^11.11.0",
     "swiper": "^11.1.4"
   },
